<resources>
    <string name="app_name">Url Shortner</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="base_url">https://urlst.ga/</string>
    <string name="title_activity_add_url">Create Short Url</string>
    <string name="create_short_link">Create Short Link</string>
    <string name="short_code">Short Code (Optional)</string>
    <string name="url">Url</string>
    <string name="banner_ad_unit_id">ca-app-pub-6103134131953835/3498629649</string>
    <string name="interstial_ad">ca-app-pub-6103134131953835/4369566992</string>
    <string name="admob_app_id">ca-app-pub-6103134131953835~2287767557</string>
    <string name="logout">Logout</string>
</resources>
